@startuml





/' Objects '/

abstract class Chat {
	+Chat(NetworkAdress& receiver)
	+~Chat()
	#cmdFactory : Command*
	#handleUserInput(std::string userInput) : Command*
	#state : FSMState
	#{abstract} parseResponse(std::string response) : Message*
	#msgTypeValidForStateReceived(MessageType type) : bool
	#msgTypeValidForStateSent(MessageType type) : bool
	#buffer : char*
	#epoll_fd : int
	#setNonBlocking(int fd) : int
	#sockfd : int
	#timeout_ms : int
	#receiver : sockaddr_in
	#sender_addr : sockaddr_in
	#{abstract} backendGetServerResponse() : std::string
	#waitForResponse(int* timeLeft) : std::string
	#backlog : std::vector<Message*>
	#client : struct clientInfo
	#{abstract} backendSendMessage(std::string message) : void
	#deleteBuffer() : void
	#{abstract} destruct() : void
	+eventLoop() : void
	#{abstract} handleDisconnect() : void
	#{abstract} handleIncommingMessage(Message* message) : void
	#printMessage(Message* msg) : void
	#printStatusMessage(Message* msg) : void
	#{abstract} readMessageFromServer() : void
	#{abstract} sendByeMessage() : void
	#{abstract} sendMessage(std::string userInput) : void
	#{abstract} sendTimeoutErrMessage() : void
	#setupAdress(NetworkAdress& sender, sockaddr_in& addr) : void
}


class ChatTCP {
	+ChatTCP(NetworkAdress& receiver)
	+~ChatTCP()
	-parseResponse(std::string response) : Message*
	-msgBuffer : MessageBuffer*
	-tcpFactory : TCPMessages*
	-backendGetServerResponse() : std::string
	-currentMessage : std::string
	-backendSendMessage(std::string message) : void
	-destruct() : void
	-handleDisconnect() : void
	-handleIncommingMessage(Message* message) : void
	-readMessageFromServer() : void
	-sendByeMessage() : void
	-sendMessage(std::string userInput) : void
	-sendTimeoutErrMessage() : void
	-waitForResponseWithTimeout() : void
}


class ChatUDP {
	+ChatUDP(NetworkAdress& sender, int retransmissions, int timeout)
	+~ChatUDP()
	-parseResponse(std::string response) : Message*
	-udpFactory : UDPMessages*
	-waitForConfirmation(Message* message) : bool
	-retransmissions : int
	-timeout : int
	-backendGetServerResponse() : std::string
	-msgStatus : std::vector<UDPmessaStatus>
	-msgCount : uint16_t
	-backendSendMessage(std::string message) : void
	-destruct() : void
	-handleDisconnect() : void
	-handleIncommingMessage(Message* message) : void
	-readMessageFromServer() : void
	-sendByeMessage() : void
	-sendMessage(std::string userInput) : void
	-sendTimeoutErrMessage() : void
	-waitForResponseWithTimeout(Message* msg) : void
}


class Command {
	+Command()
	+~Command()
	+createCommand(std::string userInput) : Command*
	-printHelp() : void {query}
	+represent() : void
}


class CommandAuth {
	+CommandAuth(std::string userInput)
	+~CommandAuth()
	-displayName : std::string
	+getDisplayName() : std::string {query}
	+getSecret() : std::string {query}
	+getUsername() : std::string {query}
	-secret : std::string
	-username : std::string
	+represent() : void
}


class CommandJoin {
	+CommandJoin(std::string userInput)
	+~CommandJoin()
	-channelId : std::string
	+getChannelId() : std::string {query}
	+represent() : void
}


class CommandMessage {
	+CommandMessage(std::string userInput)
	+~CommandMessage()
	+getMessage() : std::string {query}
	-message : std::string
	+represent() : void
}


class CommandRename {
	+CommandRename(std::string userInput)
	+~CommandRename()
	+getNewName() : std::string {query}
	-newName : std::string
	+represent() : void
}


abstract class Message {
	+Message()
	+Message(clientInfo* client)
	+~Message()
	+convertCommandToMessage() : Message*
	+readResponse() : Message*
	+{abstract} getType() : MessageType
	+getMessage() : std::string
	#client : struct clientInfo*
	+{abstract} getId() : uint16_t
	+sendByMessage() : void
	+sendErrorMessage() : void
}


class MessageAuth {
	+MessageAuth(std::string username, std::string displayName, std::string secret)
	+~MessageAuth()
	+getType() : MessageType
	#displayName : std::string
	#secret : std::string
	#username : std::string
	+getId() : uint16_t
}


class MessageAuthTCP {
	+MessageAuthTCP(std::string username, std::string displayName, std::string secret)
	+~MessageAuthTCP()
	+getMessage() : std::string
	+getId() : uint16_t
}


class MessageAuthUDP {
	+MessageAuthUDP(uint16_t msgID, std::string username, std::string displayName, std::string secret)
	+~MessageAuthUDP()
	+getMessage() : std::string
	+getId() : uint16_t
	-msgID : uint16_t
}


class MessageBuffer {
	+MessageBuffer()
	+~MessageBuffer()
	+isEmpty() : bool
	+getMessage() : std::string
	-buffer : std::vector<std::string>
	+addMessage(const std::string& message) : void
}


class MessageBye {
	+MessageBye(std::string displayName)
	+~MessageBye()
	+getType() : MessageType
	#displayName : std::string
	+getId() : uint16_t
}


class MessageByeTCP {
	+MessageByeTCP(std::string displayName)
	+~MessageByeTCP()
	+getMessage() : std::string
	+getId() : uint16_t
}


class MessageByeUDP {
	+MessageByeUDP(uint16_t msgID, std::string displayName)
	+~MessageByeUDP()
	+getMessage() : std::string
	+getId() : uint16_t
	-msgID : uint16_t
}


class MessageConfirm {
	+MessageConfirm(uint16_t msgID)
	+~MessageConfirm()
	+getType() : MessageType
	+getMessage() : std::string
	-ID : uint16_t
	+getId() : uint16_t
}


class MessageError {
	+MessageError(std::string displayName, std::string content)
	+~MessageError()
	+getType() : MessageType
	#content : std::string
	#displayName : std::string
	+getId() : uint16_t
}


class MessageErrorTCP {
	+MessageErrorTCP(std::string displayName, std::string content)
	+~MessageErrorTCP()
	+getMessage() : std::string
	+getId() : uint16_t
}


class MessageErrorUDP {
	+MessageErrorUDP(uint16_t msgID, std::string displayName, std::string content)
	+~MessageErrorUDP()
	+getMessage() : std::string
	+getId() : uint16_t
	-msgID : uint16_t
}


class MessageJoin {
	+MessageJoin(std::string channelId, std::string displayName)
	+~MessageJoin()
	+getType() : MessageType
	#channelId : std::string
	#displayName : std::string
	+getId() : uint16_t
}


class MessageJoinTCP {
	+MessageJoinTCP(std::string channelId, std::string displayName)
	+~MessageJoinTCP()
	+getMessage() : std::string
	+getId() : uint16_t
}


class MessageJoinUDP {
	+MessageJoinUDP(uint16_t msgID, std::string channelId, std::string displayName)
	+~MessageJoinUDP()
	+getMessage() : std::string
	+getId() : uint16_t
	-msgID : uint16_t
}


class MessageMsg {
	+MessageMsg(std::string displayName, std::string content)
	+~MessageMsg()
	+getType() : MessageType
	#content : std::string
	#displayName : std::string
	+getContent() : std::string {query}
	+getDisplayName() : std::string {query}
	+getId() : uint16_t
}


class MessageMsgTCP {
	+MessageMsgTCP(std::string displayName, std::string content)
	+~MessageMsgTCP()
	+getMessage() : std::string
	+getId() : uint16_t
}


class MessageMsgUDP {
	+MessageMsgUDP(uint16_t msgID, std::string displayName, std::string content)
	+~MessageMsgUDP()
	+getMessage() : std::string
	+getId() : uint16_t
	-msgID : uint16_t
}


class MessagePing {
	+MessagePing(uint16_t msgID)
	+~MessagePing()
	+getType() : MessageType
	+getMessage() : std::string
	-ID : uint16_t
	+getId() : uint16_t
}


class MessageReply {
	+MessageReply(bool isOk, std::string content)
	+~MessageReply()
	+getType() : MessageType
	#isOk : bool
	+isReplyOk() : bool {query}
	#content : std::string
	+getContent() : std::string {query}
	+getId() : uint16_t
}


class MessageReplyTCP {
	+MessageReplyTCP(bool isOk, std::string content)
	+~MessageReplyTCP()
	+getMessage() : std::string
	+getId() : uint16_t
}


class MessageReplyUDP {
	+MessageReplyUDP(uint16_t msgID, bool isOk, uint16_t refMsgID, std::string content)
	+~MessageReplyUDP()
	+getMessage() : std::string
	+getId() : uint16_t
	-msgID : uint16_t
	-refMsgID : uint16_t
}


class Settings {
	+Settings(int argc, char* argv)
	+~Settings()
	+getMode() : Mode {query}
	-mode : Mode
	+getServer() : NetworkAdress {query}
	-server : NetworkAdress
	+getMaxUdpRetransmissions() : int {query}
	+getUdpTimeoutConfirmation() : int {query}
	-maxUdpRetransmissions : int
	-udpTimeoutConfirmation : int
	-getIpFromDomain(const std::string& domain) : std::string
	-printHelp() : void {query}
	+representSettings() : void {query}
}


class TCPMessages {
	+TCPMessages(clientInfo* client)
	+convertCommandToMessage() : Message*
	+convertCommandToMessage(Command* command) : Message*
	+readResponse() : Message*
	+readResponse(std::string resopnse) : Message*
	+getType() : MessageType
	+getId() : uint16_t
}


class UDPMessages {
	+UDPMessages(clientInfo* client)
	+convertCommandToMessage() : Message*
	+convertCommandToMessage(uint16_t messageID, Command* command) : Message*
	+readResponse() : Message*
	+readResponse(std::string resopnse) : Message*
	+getType() : MessageType
	+getId() : uint16_t
	+{static} getNextZeroIdx(std::string message, unsigned int startIdx) : unsigned int
}


enum ClientStatus {
	AUTHENTICATED
	JOINED
	NONE
}


enum FSMState {
	AUTH
	END
	JOIN
	OPEN
	START
}


enum IpVersion {
	IPV4
	IPV6
	None
}


enum MessageType {
	AUTH
	BYE
	CONFIRM
	ERR
	JOIN
	MSG
	PING
	UNKNOWN
	nREPLY
	pREPLY
}


enum Mode {
	NONE
	TCP
	UDP
}


enum TargetType {
	DOMAIN_NAME
	IP_v4
	IP_v6
	UNKNOWN
}


enum UDPmessaStatus {
	CONFIRMED
	SENT
}


class NetworkAdress {
	+ipVer : IpVersion
	+hostName : std::string
	+ip : std::string
	+port : uint16_t
}


class clientInfo {
	+currentChannel : std::string
	+displayName : std::string
	+secret : std::string
	+username : std::string
}





/' Inheritance relationships '/

Chat <|-- ChatTCP


Chat <|-- ChatUDP


Command <|-- CommandAuth


Command <|-- CommandJoin


Command <|-- CommandMessage


Command <|-- CommandRename


Message <|-- MessageAuth


Message <|-- MessageBye


Message <|-- MessageConfirm


Message <|-- MessageError


Message <|-- MessageJoin


Message <|-- MessageMsg


Message <|-- MessagePing


Message <|-- MessageReply


Message <|-- TCPMessages


Message <|-- UDPMessages


MessageAuth <|-- MessageAuthTCP


MessageAuth <|-- MessageAuthUDP


MessageBye <|-- MessageByeTCP


MessageBye <|-- MessageByeUDP


MessageError <|-- MessageErrorTCP


MessageError <|-- MessageErrorUDP


MessageJoin <|-- MessageJoinTCP


MessageJoin <|-- MessageJoinUDP


MessageMsg <|-- MessageMsgTCP


MessageMsg <|-- MessageMsgUDP


MessageReply <|-- MessageReplyTCP


MessageReply <|-- MessageReplyUDP





/' Aggregation relationships '/

Chat o-- Command


Chat *-- FSMState


Chat o-- Message


Chat *-- clientInfo


ChatTCP o-- MessageBuffer


ChatTCP o-- TCPMessages


ChatUDP o-- UDPMessages


ChatUDP *-- UDPmessaStatus


Message o-- clientInfo


NetworkAdress *-- IpVersion


Settings *-- Mode


Settings *-- NetworkAdress






/' Nested objects '/



@enduml
